# othello

./: Cargo.toml  SDL2ライブラリインストール方法.md
assets/: downloadURL.txt
src/: Util.rs  board.rs  lib.rs  main.rs
