[package]
name = "othello"
version = "0.2.0"
authors = ["Takuya Sekikawa <konao235@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# このバージョンでないと成功しなかった
# ("0.34.2"が最新だったが、unstable editionとか何とか言われてコンパイルできなかった)
sdl2 = "0.30.0"

[features]
default = ["sdl2/image", "sdl2/ttf"]
